--- a/telegram_crawler/config-template.json
+++ b/telegram_crawler/config-template.json
@@ -2,5 +2,7 @@
 	"api_id": 12345,
 	"api_hash": "<api_hash>",
 	"phone_number": "<phone_number>",
-	"session_name": "<session_name>"
+	"target_identifier": "<phone_number or username or @username>",
+	"candidate_dialog_names": ["<dialog name>"],
+	"max_dialog_count": 20
 }
