--- a/.gitignore
+++ b/.gitignore
@@ -71,11 +71,17 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 __pycache__
+*.pyc
+
 # Environments
 venv/
 
 .DS_Store
 
 test.py
+mine.py
 word_cloud.png
 config.json
+
+mask?*.*
+X*.png
