forwarded messages are ignored

--- a/config-template.json
+++ b/config-template.json
@@ -9,6 +9,7 @@
 	"crawl_all_of_dialog": false,
 	"max_dialog_count": 20,
 	"ignore_english_characters": true,
+	"ignore_forwarded_messages": true,
 
 	"color_map": "PuBu",
 	"background_color": "black"
